--- a/plex/pmm/collections/random/movies.yml
+++ b/plex/pmm/collections/random/movies.yml
@@ -7,9 +7,9 @@ collections:
   # Regenerates every time the user visits the page
   "🥳 Something New":
     template: { name: New,
-                level: "++" }
+                level: "++"
+                poster_url: https://i.imgur.com/CcWfSte.png }
     summary: "Let's try something new"
-    poster_url: https://i.imgur.com/CcWfSte.png
     smart_filter:
       type: movies
       all:
@@ -25,9 +25,9 @@ collections:
   # Regenerates every time the user visits the page
   "🎲 Spin The Wheel!":
     template: { name: New,
-                level: "+" }
+                level: "+" 
+                poster_url: https://i.imgur.com/6iWNpJJ.png }
     summary: "New releases for you to take a chance on!"
-    poster_url: https://i.imgur.com/6iWNpJJ.png
     smart_filter:
       type: movies
       all:
