--- a/plex/pmm/collections/trending/movies.yml
+++ b/plex/pmm/collections/trending/movies.yml
@@ -6,12 +6,12 @@ collections:
   # Box Office
   "🍿 At The Box Office":
     template: { name: New,
-                level: "+++" }
+                level: "+++"
+                poster_url: https://i.imgur.com/LRH1tFr.png}
     summary: "Now playing on a screen near you"
     trakt_list:
       - https://trakt.tv/users/nwithan8/lists/in-cinemas-united-states
     collection_order: release.desc
-    poster_url: https://i.imgur.com/LRH1tFr.png
     visible_library: true
     visible_home: true
     visible_shared: true
@@ -19,14 +19,14 @@ collections:
   # Trending online
   "📈 Trending Now":
     template: { name: Chart,
-                level: "+++" }
+                level: "+++"
+                poster_url: https://i.imgur.com/6jZNd6W.png }
     summary: "The hottest movies right now"
     trakt_chart:
       chart: trending
       limit: 50
     collection_order: custom
     sync_mode: sync
-    poster_url: https://i.imgur.com/6jZNd6W.png
     visible_library: true
     visible_home: true
     visible_shared: true
@@ -34,12 +34,12 @@ collections:
   # Trending on Plex
   "👀 What Everyone Is Watching":
     template: { name: Chart,
-                level: "++" }
+                level: "++"
+                poster_url: https://i.imgur.com/vyFG5o7.png}
     summary: "What other subscribers are checking out"
     libraries: "Movies"  # Only consider movies in the Movies library (even when building this collection for 4K Movies)
     sync_mode: sync
     collection_order: custom
-    poster_url: https://i.imgur.com/vyFG5o7.png
     tautulli_popular:
       list_days: 30
       list_size: 15
