--- a/plex/pmm/collections/new/movies.yml
+++ b/plex/pmm/collections/new/movies.yml
@@ -8,7 +8,7 @@ collections:
     template: { name: New,
                 level: "++"}
     summary: "Movies now playing on Plex"
-    url_poster: poster_url: https://i.imgur.com/jUMSikZ.png
+    url_poster: https://i.imgur.com/jUMSikZ.png
     smart_filter:
       type: movies
       sort_by: release.desc
