--- a/plex/pmm/collections/new/shows.yml
+++ b/plex/pmm/collections/new/shows.yml
@@ -6,9 +6,9 @@ collections:
   ### New Content
   "➕ Added This Week":
     template: { name: New,
-                level: "++++",
-                poster_url: https://i.imgur.com/MzDqnFH.png }
+                level: "++++" }
     summary: "Episodes added this week on Plex"
+    url_poster: https://i.imgur.com/MzDqnFH.png
     smart_filter:
       type: episode
       sort_by: release.desc
@@ -22,9 +22,9 @@ collections:
 
   "📺 Now On Plex":
     template: { name: New,
-                level: "+++",
-                poster_url: https://i.imgur.com/MzDqnFH.png }
+                level: "+++" }
     summary: "Shows now playing on Plex"
+    url_poster: https://i.imgur.com/MzDqnFH.png
     smart_filter:
       type: show
       sort_by: release.desc
