--- a/plex/pmm/collections/best/shows.yml
+++ b/plex/pmm/collections/best/shows.yml
@@ -23,29 +23,29 @@ collections:
   #  filters:
   #    has_dolby_vision: false
 
-  1080p:
-    plex_search:
-      all:
-        resolution: 1080p
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/resolution/1080.jpg?raw=true
-    filters:
-      has_dolby_vision: false
+  #1080p:
+  #  plex_search:
+  #    all:
+  #      resolution: 1080p
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://github.com/meisnate12/Plex-Meta-Manager-Images/blob/master/resolution/1080.jpg?raw=true
+  #  filters:
+  ##    has_dolby_vision: false
       
-  IMAX-Enhanced:
-    plex_all: true
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/224736/view?performed_by=flk203
-    filters:
-      filepath.regex: (IMAX Enhanced)
-  4k:
-    plex_search:
-      all:
-        resolution: 4K
-    sort_title: +01_09_<<collection_name>>
-    url_poster: https://theposterdb.com/api/assets/220482/view
-    filters:
-      filepath.regex: (Remux-2160p|2160p|4K)
+  #IMAX-Enhanced:
+  #  plex_all: true
+  #  sort_title: +01_09_<<collection_name>>
+  #  url_poster: https://theposterdb.com/api/assets/224736/view?performed_by=flk203
+  #  filters:
+  #    filepath.regex: (IMAX Enhanced)
+  #4k:
+  #  plex_search:
+  #    all:
+  #      resolution: 4K
+  #  sort_title: +01_09_<<collection_name>>
+  # url_poster: https://theposterdb.com/api/assets/220482/view
+  # filters:
+  #   filepath.regex: (Remux-2160p|2160p|4K)
       
 
   #Remux 1080P:
