--- a/plex/pmm/collections/holidays/shows.yml
+++ b/plex/pmm/collections/holidays/shows.yml
@@ -3,72 +3,10 @@ external_templates:
   - repo: templates/dynamic_collections
 
 collections:
-  # Recommended levels (will appear in the order below):
-  # ++++ - Major holidays, especially those with a specific date or small range (top priority)
-  # +++ - Major holidays, especially those with a specific date or small range (lower priority)
-  # ++ - Month-long or extended holidays
-  # + - Lesser holidays
-
-  "✊🏿 Black History Month":
-    schedule: range(02/01-03/01)
-    visible_home: range(02/01-02/29)
-    visible_shared: range(02/01-02/29)
-    visible_library: range(02/01-02/29)
-    template: { name: Holiday,
-                level: "++",
-                poster_url: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/seasonal/black_history2.jpg }
-    summary: "Celebrate Black History Month with these movies!"
-    collection_order: random
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/black-history-month
-
-  "🌏 AAPI Heritage Month":
-    schedule: range(05/01-06/01)
-    visible_home: range(05/01-05/31)
-    visible_shared: range(05/01-05/31)
-    visible_library: range(05/01-05/31)
-    template: { name: Holiday,
-                level: "++",
-                poster_url: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/seasonal/aapi.jpg }
-    summary: "Celebrate Asian American and Pacific Islander Heritage Month with these movies!"
-    collection_order: random
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/asian-american-pacific-islander-heritage-month
-
-  "🏳️‍🌈 LGBTQ+ Pride Month":
-    schedule: range(06/01-07/01)
-    visible_home: range(06/01-06/30)
-    visible_shared: range(06/01-06/30)
-    visible_library: range(06/01-06/30)
-    template: { name: Holiday,
-                level: "++",
-                poster_url: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/seasonal/lgbtq.jpg }
-    summary: "Celebrate Pride Month with these movies!"
-    collection_order: random
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/lgbtq-pride-month
-
-  "🇪🇸 Hispanic Heritage Month":
-    schedule: range(09/15-10/16)
-    visible_home: range(09/15-10/15)
-    visible_shared: range(09/15-10/15)
-    visible_library: range(09/15-10/15)
-    template: { name: Holiday,
-                level: "++",
-                poster_url: https://raw.githubusercontent.com/meisnate12/Plex-Meta-Manager-Images/master/seasonal/hispanic.jpg }
-    summary: "Celebrate Hispanic Heritage Month with these movies!"
-    collection_order: random
-    trakt_list:
-      - https://trakt.tv/users/plexmetamanager/lists/hispanic-heritage-month
-
-  "🗳️ Election Day":
-    schedule: range(10/25-11/12)
-    visible_home: range(10/25-11/11)
-    visible_shared: range(10/25-11/11)
-    visible_library: range(10/25-11/11)
-    template: { name: Holiday,
-                level: "+++" }
-    summary: "I like the noise of democracy."
-    collection_order: random
-    trakt_list:
-      - https://trakt.tv/users/majeed_pk/lists/political-tv-series
+  Diana:
+    plex_search:
+      studio: [D&R]
+    sort_title: +01_09_<<collection_name>>
+    summary: "Collection of D&R"
+    collection_order: release
+    collection_mode: hide
