--- a/plex/pmm/collections/studio/palestine.yml
+++ b/plex/pmm/collections/studio/palestine.yml
@@ -21,11 +21,9 @@ dynamic_collections:
     type: genre
     template: journeyman_collection
     template_variables: 
-      my_collection_poster:
-        - https://i.imgur.com/FZ1twh2.jpeg
+      my_collection_poster: https://i.imgur.com/FZ1twh2.jpeg
   Electronic Intifada:         # mapping name does not matter just needs to be unique
     type: genre
     template: ei_collection
     template_variables: 
-      my_collection_poster:
-        - https://i.imgur.com/49iDToy.png
+      my_collection_poster: https://i.imgur.com/49iDToy.png
